# FRAG-DEMO

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: dev.ts  download_demos.py  dry_run_test.py  hltv_browser.py  inspect_json.py  test_parse.py
server/: index.test.ts  index.ts
src/frag_demo/: app.py  runtime.py  worker.py
src/frag_demo/encoder/: __init__.py  ffmpeg.py
src/frag_demo/launcher/: __init__.py  cs2.py
src/frag_demo/parser/: __init__.py  demo_parser.py
src/frag_demo/query/: __init__.py  engine.py
src/frag_demo/sequences/: __init__.py  builder.py
src/frag_demo/static/: app.js  style.css
src/frag_demo/templates/: index.html
tests/: test_app.py  test_encoder.py  test_launcher.py  test_parser.py  test_query.py  test_runtime.py  test_sequences.py
tools/hlae/: AfxHookGoldSrc_changelog.xml  AfxHookSource2_changelog.xml  AfxHookSource_changelog.xml  advancedfx.org.url  changelog.xml  readme.txt
tools/hlae/ffmpeg/: readme.advancedfx.txt
tools/hlae/locales/de/hlae/: messages.mo
tools/hlae/resources/: hexfont.tga
tools/hlae/resources/shaders/: afx_depth_ps20.acs  afx_depth_ps_5_0.acs  afx_depth_vs_5_0.acs  afx_drawtexture_ps20.acs  afx_drawtexture_ps_5_0.acs  afx_drawtexture_vs_5_0.acs  afx_line_ps20.acs  afx_line_ps_5_0.acs  afx_line_vs20.acs  afx_line_vs_5_0.acs  afx_pgldraw_ps20.acs  afx_pgldraw_vs20.acs
web/: index.html
web/src/: App.test.tsx  App.tsx  api.ts  app.css  main.tsx
(+29 files in other folders)
